CMake dev builds
Updated CMakeLists file to allow for the creation of concurrent Stable
and Dev builds. Set the DevRelease variable to a negation (N, No, 0) to
build using the stable source. Original main.cpp has been renamed to
stable.cpp to clarify this change.

--- a/EngineConfig.h.in
+++ b/EngineConfig.h.in
@@ -1,9 +1,10 @@
 #ifndef CONFIG_H_IN
 #define CONFIG_H_IN
 
-#cmakedefine Engine_Major_Version @Engine_Major_Version@
-#cmakedefine Engine_Minor_Version @Engine_Minor_Version@
-#cmakedefine Engine_Build @Engine_Build@
-#cmakedefine Engine_Version "@Engine_Version@"
+#define Engine_Major_Version @Engine_Major_Version@
+#define Engine_Minor_Version @Engine_Minor_Version@
+#define Engine_Build @Engine_Build@
+#define Engine_Version "@Engine_Version@"
+#define DevRelease "@DevRelease@"
 
 #endif
