Revised Building; Physics Classes; Modules
New batch of CMake build modifications. Migrated from maintaining
separate main files to a shared main.
Created the initial framework for the N-Body simulation.
Established two modules for module framework testing.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -2,8 +2,8 @@ cmake_minimum_required(VERSION 2.8.9)
 cmake_policy(SET CMP0020 NEW)
 if(WIN32)
 set(WIN_LIB_DIR "C:/ProjectLibs")
+link_directories(${WIN_LIB_DIR}/lib)
 endif(WIN32)
-#set(GCC_COMP_FLAGS "-static-libgcc -static-libstdc++ -std=gnu++0x -L ${WIN_LIB_DIR} -lopengl32 -lglu32 -lglfw3")
 set(GCC_COMP_FLAGS "-static-libgcc -static-libstdc++ -std=gnu++0x")
 set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} ${GCC_COMP_FLAGS}")
 find_program(CMAKE_CXX_COMPILER g++)
@@ -14,10 +14,13 @@ project(StellaEngine)
 #Versioning
 set(Engine_Major_Version 0)
 set(Engine_Minor_Version 0)
-set(Engine_Build 004)
+set(Engine_Patch 015)
 set(DevRelease Y)                                                                                   #DevRelease? NOTE: After changing, rerun CMake to cache the change
 set(UseQT N)                                                                                        #UseQt Modules?
-set(Engine_Version ${Engine_Major_Version}.${Engine_Minor_Version}.${Engine_Build})
+set(Engine_Version ${Engine_Major_Version}.${Engine_Minor_Version}.${Engine_Patch})
+if(DevRelease)
+set(Engine_Version "${Engine_Version} DEV")
+endif(DevRelease)
 
 #Create Config
 configure_file("${PROJECT_SOURCE_DIR}/EngineConfig.h.in" "${PROJECT_BINARY_DIR}/EngineConfig.h")
@@ -34,9 +37,6 @@ find_package(OpenGL REQUIRED)
 find_package(GLEW REQUIRED)
 find_package(GLFW REQUIRED)
 set(GLLibs ${GLFW_LIBRARIES} ${OPENGL_LIBRARIES} ${GLEW_LIBRARIES})
-if(WIN32)
-link_directories(${WIN_LIB_DIR}/lib)
-endif(WIN32)
 
 #Include Qt Resources. Prefer standard OpenGL usage, but left as an option.
 if(UseQT)
@@ -56,9 +56,9 @@ endif(UseQT)
 
 #Create Execs
 if(DevRelease)
-add_executable(StellaEngine dev.cpp)
+add_executable(StellaEngine-Experimental main.cpp)
 else(DevRelease)
-add_executable(StellaEngine stable.cpp)
+add_executable(StellaEngine main.cpp)
 endif(DevRelease)
 
 #Link Launcher Libraries
