--- a/EngineConfig.h.in
+++ b/EngineConfig.h.in
@@ -5,6 +5,7 @@
 #define Engine_Minor_Version @Engine_Minor_Version@
 #define Engine_Patch @Engine_Patch@
 #define Engine_Version "@Engine_Version@"
+#define WIN_BUILD @WIN_BUILD@
 
 void printVersion(){
     std::string version = "Stella Engine: v. ";
