--- a/StellaLauncher/CMakeLists.txt
+++ b/StellaLauncher/CMakeLists.txt
@@ -4,7 +4,7 @@ if(WIN32)
 set(WIN_LIB_DIR "C:/ProjectLibs")
 link_directories(${WIN_LIB_DIR}/lib)
 endif(WIN32)
-set(GCC_COMP_FLAGS "-static-libgcc -static-libstdc++ -std=gnu++0x")
+set(GCC_COMP_FLAGS "-static-libgcc -static-libstdc++ -std=gnu++0x -fopenmp")
 set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} ${GCC_COMP_FLAGS}")
 set(PROJECT_BINARY_DIR ${PROJECT_SOURCE_DIR}/build)
 find_program(CMAKE_CXX_COMPILER g++)
@@ -17,6 +17,10 @@ find_package(OpenGL REQUIRED)
 find_package(GLEW REQUIRED)
 find_package(GLFW REQUIRED)
 set(GLLibs ${GLFW_LIBRARIES} ${OPENGL_LIBRARIES} ${GLEW_LIBRARIES})
+set(DevRelease ${DevRelease} CACHE BOOL "Set to Y if Development Build; N otherwise" FORCE)
+
+#Launcher Version System
+set(UseQT ${UseQt} CACHE BOOL "Specifies whether the Qt Libraries are used" FORCE)
 
 #Include Qt Resources. Prefer standard OpenGL usage, but left as an option.
 if(UseQT)
@@ -31,13 +35,31 @@ set(QtComp Core Widgets)                                                        
 find_package(Qt5 REQUIRED COMPONENTS ${QtComp})
 set(CMAKE_INCLUDE_CURRENT_DIR ON)
 set(CMAKE_AUTOMOC ON)
-else(UseQT)
 endif(UseQT)
+
+#Include Stella Library
+find_package(Stella REQUIRED)
+set(StellaLib ${STELLA_LIBRARIES})
+
+#Add Debugging information (DevReleases)
+if(DevRelease)
+set(CMAKE_BUILD_TYPE "Debug")
+else(DevRelease)
+set(CMAKE_BUILD_TYPE "Release")
+endif(DevRelease)
 
 #Link Launcher Libraries
 add_executable(Stella-Launcher runLauncher.cpp)
 if(UseQT)
-qt5_use_modules(Stela-Launcher ${QtComp})
+qt5_use_modules(Stella-Launcher ${QtComp})
 else(UseQT)
-target_link_libraries(Stella-Launcher ${GLLibs})
+target_link_libraries(Stella-Launcher ${GLLibs} ${StellaLib} ${CMAKE_DL_LIBS})
 endif(UseQT)
+
+#Install Executable
+if(CMAKE_INSTALL_PREFIX_INITIALIZED_TO_DEFAULT)
+set(CMAKE_INSTALL_PREFIX ~/.zenith CACHE PATH "Standard Zenith Installation Directory" FORCE)
+endif(CMAKE_INSTALL_PREFIX_INITIALIZED_TO_DEFAULT)
+install(TARGETS Stella-Launcher RUNTIME DESTINATION ${CMAKE_INSTALL_PREFIX})
+install(CODE "execute_process(COMMAND ${CMAKE_COMMAND} -E make_directory \${CMAKE_INSTALL_PREFIX}/modules)")
+install(CODE "execute_process(COMMAND ${CMAKE_COMMAND} -E make_directory \${CMAKE_INSTALL_PREFIX}/assets)")
